tests/whiley/valid/test_214.wyal
type num is (int x)
where:
    (1 <= x) && (x <= 4)


define g_requires_0(int x, int z) is:
    ((x == 1) || (x == 2)) && ((z == 1) || ((z == 2) || ((z == 3) || (z == x))))


assert "type invariant not satisfied":
    forall(int x, int z):
        if:
            g_requires_0(x, z)
        then:
            z is num


