tests/whiley/invalid/test_71.wyal
type num is (int x)
where:
    (x == 1) || ((x == 2) || ((x == 3) || (x == 4)))


define g_requires_0(int x, int z) is:
    ((x == 0) || (x == 1)) && ((z == 1) || ((z == 2) || ((z == 3) || (z == x))))


assert "type invariant not satisfied":
    forall(int z, int x):
        if:
            g_requires_0(x, z)
        then:
            z is num


